########################################
# Headers
########################################

clinkcav_header = \
	cybergarage/upnp/std/av/ccontent.h \
	cybergarage/upnp/std/av/cdidl.h \
	cybergarage/upnp/std/av/cmd5.h \
	cybergarage/upnp/std/av/cmediaserver.h \
	cybergarage/upnp/std/av/cprotocolinfo.h \
	cybergarage/upnp/std/av/cupnpav.h \
	cybergarage/upnp/std/av/cresource.h \
	cybergarage/upnp/std/av/cmediarenderer.h \
	gstreamer_0.10/output_gstreamer.h \
	gstreamer_0.10/logging.h 
#       cybergarage/upnp/std/av/logging.h 

########################################
# Library
########################################

nobase_include_HEADERS = \
	$(clinkcav_header)
